Version 21 Frontend: Add player icons Backend: Save all player data Added missing fields: arrivalDate ownerNotes statement abroad leagueGoals cupGoals friendliesGoals careerGoals careerHattricks matchesCurrentTeam goalsCurrentTeam assistsCurrentTeam careerAssists transferListed nationalTeamId caps capsU21 cards playerCategoryId